--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,6 +1,6 @@
 .home,
 .blog,
-.Misc
+.Projects
     margin-top: 125px
 
     > .list
@@ -25,7 +25,7 @@
 
 .home > .list,
 .blog > .list,
-.Misc > .list
+.Projects > .list
     > .item
         display: block
         width: 95%
@@ -63,7 +63,7 @@
         color: $alpha
 
 .blog > .list > .item > .url,
-.Misc > .list > .item > .url
+.Projects > .list > .item > .url
     > .title
         display: inline
 
