--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,10 +14,10 @@
             {% endif %}
         {% endif %}
 
-        {% if site.Projects == true %}
+        {% if site.projects == true %}
             {% if page.title != "Projects" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/Projects">Projects</a>
+                    <a class="link" href="{{ site.url }}/projects">Projects</a>
                 </li>
             {% endif %}
         {% endif %}
@@ -28,6 +28,12 @@
                     <a class="link" href="{{ site.url }}/about">About</a>
                 </li>
             {% endif %}
+        {% endif %}
+
+        {% if site.resume == true %}
+            <li class="item">
+                <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
+            </li>
         {% endif %}
     </ul>
 </nav>
